# passwd

./: .gitignore  Cargo.toml  Taskfile.yml  install.sh  passwd
chrome/: README.md  jsconfig.json  package-lock.json  package.json  sidepanel.html  vite.config.js
chrome/public/: manifest.json
chrome/public/assets/: index.css
chrome/src/: App.vue  background.js  front.js  main.js
chrome/src/assets/js/: aes.js
chrome/src/components/: CreateAndEdit.vue
wdbox/: Cargo.toml
wdbox/src/: lib.rs  main.rs  server.rs
